# Kyu

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
Casks/: kyu.rb
docs/: RELEASE.md
packaging/homebrew/: README.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: button.tsx  scroll-area.tsx  textarea.tsx
src/lib/: format.test.ts  format.ts  highlight.test.ts  highlight.ts  prompts.ts  shortcut.test.ts  shortcut.ts
