[package]
name = "kyu"
version = "0.2.1"
description = "A menu bar prompt queue for AI agents"
authors = ["Kyu contributors"]
edition = "2021"

[lib]
name = "kyu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
